Fixed up postCodeInput border to an appropriate size, and properly aligned all text

--- a/style.css
+++ b/style.css
@@ -3,32 +3,29 @@ body {
 }
 
 #postCodeInputPanel {
-    padding:10px;
-    border-style: solid;
-    border-width:3px;
-    position:fixed;
-    border-color:#291b09;;
-    top:18%;
-    left:20%;
-    margin-top: -50px;
-    margin-left: -100px;
+    font-size:20px;
+    text-align:left;
+    font-family:Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    border:3px;
+    border-style:solid;
+    padding: 5px;
+    line-height:2;
+    width:330px;
 }
 
 #mainTitle {
     border:3px;
-    padding:5px;
+    padding:6px;
     border-style:solid;
-    position:fixed;
-    top:15%;
-    left:50%;
-    margin-top: -100px;
-    margin-left: -200px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:40px;
+    text-align:center;
 }
 
 #output {
-    position:fixed;
-    top:25%;
-    left:10%;
-    margin-top:-10px;
-    margin-left:-60px;
+    text-align:left;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:20px;
+    text-align:justify;
 }
